--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>7</version>
     </parent>
 
-    <groupId>com.trendradius</groupId>
+    <groupId>org.trendradius</groupId>
     <artifactId>Fogbugz</artifactId>
     <version>2.2.10-SNAPSHOT</version>
     <packaging>jar</packaging>
